# Sass_Forest_Bolier

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.atl/: skill-registry.md
.github/: dependabot.yml
.github/workflows/: ci.yml
SKILLS/: README.md
SKILLS/django-allauth/: SKILL.md
SKILLS/django-htmx/: SKILL.md
SKILLS/htmx-patterns/: SKILL.md
SKILLS/local-architecture-docs/: SKILL.md
SKILLS/local-architecture-templates/: SKILL.md
apps/dashboard/: tasks.py  tests.py  urls.py  views.py
apps/users/: admin.py  apps.py  models.py
config/: urls.py
config/settings/: __init__.py  base.py  dev.py
config/template/: index.html
docker/: dev.Dockerfile
docs/: frontend-rebrand-backlog.md  frontend-rebrand-todo.md  frontend-restructure-plan.md  frontend.md  template-audit.md
requirements/: base.txt  local.txt
src/: manage.py
src/config/: urls.py
src/templates/: base.html  cdns.html  landing.html
templates/: README.md  SKILL.md  base.html  cdns.html  landing.html  navbar.html
templates/account/: confirm_login_code.html  delete.html  email.html  email_change.html  email_change_done.html  email_confirm.html  inactive.html  login.html  logout.html  password_change.html  password_change_done.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  reauthenticate.html  signup.html  verification_sent.html
templates/components/: alert.html  auth_container.html  auth_form.html  badge.html  button.html  card_stat.html  error_block.html  field.html  form_field.html  input.html  input_field.html  link.html  (+4 more)
(+68 files in other folders)
